Add SNB electron direction analysis with MCMC
- Generate 1000 SNB bursts with MARLEY (200 and 400 electrons tested)
- Analyze alignment between neutrino and average electron directions
- Implement MCMC fitting (128 walkers, 200 steps) using emcee
- Results: cos(θ) ≈ 0.9999, excellent forward scattering alignment
- Demonstrate √N scaling: σ doubles when reducing from 400 to 200 electrons
- Reorganize repository structure:
  - Move HTCondor files to condor/
  - Move documentation to docs/
  - Keep only README.md in root
- Add comprehensive analysis documentation
- Fix HEPEVT parsing bug (event header format)
- Create diagnostic plots: trace, posterior, corner, Q-Q plots

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,18 @@ Thumbs.db
 
 
 data
+# Temporary config files
+configs_temp/
+configs/test_*.js
+configs/*.hepevt
+configs/events.ascii
+
+# HTCondor logs
+logs/*.out
+logs/*.err
+logs/*.log
+
+# Data files (large)
+data/snb_1000/*.hepevt
+data/snb_1000/snb_*.hepevt
+
